<resources>
    <string name="app_name">TodoList</string>
    <string name="not_registered">Not registered? </string>
    <string name="register"> Register</string>
    <string name="login">Login</string>
    <string name="sign_in">SIGN IN</string>
    <string name="user_name">User name</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_verification">Password verification</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_tasks">Tasks</string>

    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="log_out">Log out</string>
    <string name="support">Support</string>
    <string name="share">Share</string>
    <string name="tasks">Tasks</string>
    <string name="homepage">Homepage</string>
    <string name="home">Home</string>
    <string name="today_tasks">Today tasks</string>
    <string name="more_tasks">More tasks</string>
    <string name="search">Search</string>
    <string name="select_a_date">Select a date</string>
    <string name="text">Text</string>
    <string name="title">Title</string>
    <string name="submit">Submit</string>
    <string name="about">About</string>
    <string name="forgot_password">Forgot password?</string>
</resources>