<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page"
    android:padding="26dp"
    android:layout_margin="0dp"
    android:orientation="vertical">


    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/title"
        android:layout_margin="10dp"
        android:textColor="@color/red"
        android:textColorHint="@color/red"
        android:backgroundTint="@color/red"/>

    <EditText
        android:id="@+id/edit_text_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/text"
        android:layout_margin="10dp"
        android:textColor="@color/red"
        android:textColorHint="@color/red"
        android:backgroundTint="@color/red" />

    <Button
        android:id="@+id/date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_a_date"
        android:layout_gravity="center"
        style="?android:spinnerStyle"
        android:layout_marginTop="10dp"
        android:textColor="@color/red"
        android:backgroundTint="@color/red"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        android:layout_gravity="center"
        android:indeterminateTint="@color/redDark"/>

    <Button
        android:id="@+id/submit_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="10dp"
        android:textColor="@color/red"
        android:backgroundTint="@color/red"
        android:backgroundTintMode="screen"
        android:layout_gravity="center"/>

</LinearLayout>