<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/page"
    android:gravity="center">

<!--  todo make a forget password option  -->

    <LinearLayout
        android:layout_margin="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/sign_in_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:textColor="@color/purple_500"
            android:backgroundTint="@color/red"
            android:drawableStart="@drawable/ic_user"/>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/sign_in_password"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/red"
                android:backgroundTint="@color/red"
                android:drawableStart="@drawable/ic_password" />

             <ImageButton
                    android:id="@+id/visibility_control"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_invisible" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/remember_me_switch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:theme="@style/SwitchCompatTheme"
                android:text="@string/remember_me"
                android:layout_weight="2"
                android:textStyle="bold|italic"
                android:textColor="@color/red"
                android:backgroundTint="@color/redLight"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/login"
                android:layout_marginStart="10dp"
                android:textColor="@color/red"
                android:backgroundTint="@color/red"
                android:backgroundTintMode="screen"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="top">

            <TextView
                android:id="@+id/TextViewIsRegistered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_registered"
                android:textSize="20sp"
                android:textColor="@color/red"/>

            <TextView
                android:id="@+id/not_register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/redDark"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>