<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/page">

    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text"
            android:textColor="@color/red"
            android:backgroundTint="@color/red"
            android:drawableStart="@drawable/ic_email"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:textColor="@color/red"
            android:backgroundTint="@color/red"
            android:drawableStart="@drawable/ic_user"/>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/register_password"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/red"
                android:backgroundTint="@color/red"
                android:drawableStart="@drawable/ic_password"/>

            <ImageButton
                android:id="@+id/visibility_control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_invisible"/>

        </LinearLayout>

        <EditText
            android:id="@+id/register_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/password_verification"
            android:inputType="textPassword"
            android:textColor="@color/red"
            android:backgroundTint="@color/red"
            android:drawableStart="@drawable/confirm_password"/>

    </LinearLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="@color/red"
        android:backgroundTintMode="screen"/>

</LinearLayout>